--- a/services.html
+++ b/services.html
@@ -107,11 +107,11 @@
   </section>
    <div class="container">
            <h1 id="para1">SERVICES</h1>
- <div class="row" id="responsive">
+		<div class="row">
      
             <!-- Card -->
-	 <div class="col-sm-8 col-md-3 col-lg-3 card-ser">
-         <div class="card border-0" id="shadow">
+ <div class="col-sm-8 col-md-3 col-lg-3 card-ser">
+         <div class="card border-0" id="shadow" style="margin-left:100px;margin-right:-100px">
 
 <!-- Card image -->
          <a href="farmset.html">
@@ -119,7 +119,7 @@
 <!-- Card content -->
         <div class="card-body" id="aa">
 <!-- Title -->
-         <h4 class="card-title"><a>Farmset</a></h4>
+         <h4 class="card-title"><a>Farm set</a></h4>
 <!-- Text -->
          <p class="card-text">Amount :$4500</p>
 	     </div>
@@ -129,7 +129,7 @@
              <!-- Card -->
 			
     <div class="col-sm-8 col-md-3 col-lg-3">
-	    <div class="card border-0" id="shadow">
+	    <div class="card border-0" id="shadow" style="margin-left:80px;margin-right:-80px">
 <!-- Card image -->
          <a href="farmplan.html">
          <img class="card-img-top" src="img/farmplan.jpg"  style="height: 200px;" alt="Card image cap"></a>
@@ -146,14 +146,14 @@
 
              <!-- Card -->
 	 <div class="col-sm-8 col-md-3 col-lg-3">		 
-         <div class="card border-0"  id="shadow">
+         <div class="card border-0"  id="shadow" style="margin-left:60px;margin-right:-50px" >
 <!-- Card image -->
          <a href="greenhut.html">
          <img class="card-img-top" src="img/greenhut.jpg"  style="height: 200px;" alt="Card image cap"></a>
 <!-- Card content -->
          <div class="card-body" id="aa">
 <!-- Title -->
-         <h4 class="card-title"><a>Green hut</a></h4>
+         <h4 class="card-title"><a>Greenhut</a></h4>
 <!-- Text -->
           <p class="card-text">Amount :$4500</p>
 	     </div>
@@ -161,7 +161,7 @@
 	 </div>
 		     <!-- Card -->
 	 <div class="col-sm-8 col-md-3 col-lg-3">
-         <div class="card border-0" id="shadow" >
+         <div class="card border-0" id="shadow" style="margin-left:30px;margin-right:-30px">
 <!-- Card image -->
          <a href="farmplan.html">
          <img class="card-img-top" src="img/farmplan.jpg" style="height: 200px;" alt="Card image cap"></a>
@@ -174,7 +174,9 @@
 	    </div>
 		</div>
 	</div>
-</div>
+</div>   
+
+
 
 		 
 </div>
@@ -197,3 +199,4 @@
 <script type="text/javascript"></script>
 
 </html>
+
