--- a/dartapp.html
+++ b/dartapp.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Dart App Page</title>
+  <title>Dart App</title>
   <!-- MDB icon -->
   <link rel="icon" href="img/agri logo.png" type="image/x-icon">
   <!-- Font Awesome -->
@@ -33,7 +33,7 @@
         aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+      <div class="collhiddenapse navbar-collapse" id="navbarSupportedContent-4">
         <ul class="navbar-nav ml-auto nav-items flex-center">
           <li class="nav-item">
             <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
@@ -84,14 +84,14 @@
 <div class="jumbotron text-center">
 
   <!-- Title -->
-  <h1 class="card-title h1"><center><strong>Dart App</strong></center></h1>
+  <h1 class="card-title h1"><center><img src="IMG-20200427-WA0048.jpg" style="width: 200px;"></center></h1>
   <!-- Subtitle -->
   <p class="mytxt my-4 font-weight-bold">A Platfrom for selling Fast Moving Consumer Goods</p>
-  <hr class="my-4">
+  <hr class="container my-4">
 
   <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8" style="margin-top: auto;margin-bottom: auto;">
           <!-- Grid column -->
           <div class="col-12 col-md-auto text1">
     
@@ -113,7 +113,7 @@
     </div>
   
 
-  <hr class="my-4">
+  <!-- <hr class="my-4"> -->
 
   <div class="pt-2">
       <p class="card-text "> Do not have the app yet? Get it here..</p>
