--- a/dartapp.html
+++ b/dartapp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,7 +18,10 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/dartstyle.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <!-- Start your project here-->
 
@@ -78,55 +82,74 @@
       </div>
     </div>
   </nav> -->
-<!--/.Navbar -->
- 
-<!-- Jumbotron -->
-<div class="jumbotron text-center">
+  <!--/.Navbar -->
 
-  <!-- Title -->
-  <h1 class="card-title h1"><center><img src="IMG-20200427-WA0048.jpg" style="width: 200px;"></center></h1>
-  <!-- Subtitle -->
-  <p class="mytxt my-4 font-weight-bold">A Platfrom for selling Fast Moving Consumer Goods</p>
-  <hr class="container my-4">
+  <!-- Jumbotron -->
+  <div class=" text-center">
 
-  <div class="container">
+    <!-- Title -->
+    <h1 class="card-title h1">
+      <center><img src="IMG-20200427-WA0048.jpg" style="width: 200px;"></center>
+    </h1>
+    <!-- Subtitle -->
+    <!-- <p class="mytxt my-4 font-weight-bold">A Platfrom for selling Fast Moving Consumer Goods</p> -->
+    <h1 class="text-center tag-line">Cart with Dart</h1>
+    <hr class="container my-4">
+
+    <div class="container">
       <div class="row">
         <div class="col-md-8" style="margin-top: auto;margin-bottom: auto;">
           <!-- Grid column -->
           <div class="col-12 col-md-auto text1">
-    
-            <p class="card-text text-descri">A short description of Dart App will be here..Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <center><img class="qr" src="img/qr.png" alt="QR Code"></center>
+
+            <p class="card-text text-descri">How does it feel to scroll up and down, select your groceries and pet food
+              for the week, place the order, and sit back and relax? There you go! Get fresh products delivered at your
+              doorstep in a flash with Dart!<br><br>
+
+              Dart is an online local delivery system that caters to all your needs from veggies to stationery, one step
+              away from a click. In collaboration with our delivery partners, we are at your service for a nominal
+              delivery charge on a time-slot basis.<br><br>
+
+              As the world has changed dramatically in the last 100 days, it comes with no surprise that the consumers
+              have had to change their buying habits to adapt to it - in ways big and small. We, at Dart, realise the
+              gravity of this transformation and have associated with local farmers to deliver fresh food items from
+              farm to table, direct. What more! Quality first, everything else second.<br><br>
+
+              Now, why wait? Get buying!<br><br>
+              Let's cart with Dart!</p>
           </div>
           <!-- Grid column -->
-    
+
         </div>
         <div class="col-md-4">
           <!-- Grid column -->
-        <div class="col-xl-7 pb-2">
-            <img class="d-block imgclass" src="img/agri app.jpg"
-          alt="App Screen">
+          <div class="col-xl-7 pb-2">
+            <img class="d-block my-3 imgclass" src="IMG-20200427-WA0149.jpg" alt="App Screen">
           </div>
           <!-- Grid column -->
         </div>
+        <div class="row my-5 mx-auto">
+          <img class="qr mx-auto" src="img/qr.png" alt="QR Code">
+
+        </div>
       </div>
     </div>
-  
 
-  <!-- <hr class="my-4"> -->
 
-  <div class="pt-2">
-      <p class="card-text "> Do not have the app yet? Get it here..</p>
-  <!-- Linkedin -->
-  &nbsp;
-  &nbsp;
-  <a class="fa-lg p-2 m-2 li-ic"><i class="fab fa-google-play fa-2x"></i></a>
-  <!-- Twitter -->
-  <a class="fa-lg p-2 m-2 tw-ic"><i class="fab fa-apple fa-2x"></i></i></a>
+    <!-- <hr class="my-4"> -->
+
+    <div class="pt-2 my-3">
+      <p class="card-text h5"> Do not have the app yet? Get it here..</p>
+      <!-- Linkedin -->
+      &nbsp;
+      &nbsp;
+      <a class="fa-lg p-2 m-2 li-ic"><i class="fab fa-google-play fa-2x"></i></a>
+      <!-- Twitter -->
+      <a class="fa-lg p-2 m-2 tw-ic"><i class="fab fa-apple fa-2x"></i></i></a>
+    </div>
+
   </div>
-
-</div>
-<!-- Jumbotron -->
+  <!-- Jumbotron -->
 
 
   <!-- End your project here-->
@@ -143,4 +166,5 @@
   <script type="text/javascript"></script>
 
 </body>
+
 </html>
