added services html

--- a/services.html
+++ b/services.html
@@ -1,202 +1,345 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>AGRIVATOR</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="services.css">
-  <link rel="stylesheet" href="css/product.css">
-<style>
-#aa
-{
-  text-align: center;
-  color:#78b122;
-}
- #para1{
-  text-align:center;
-  margin-bottom:5%;
-  color:green;
-  margin-top:8%;
- }
- 
-#shadow
-{
-   box-shadow: 5px 10px 9px #888888;
-   margin-left:10px;
-   } 
-
-
- 
-
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Services Page</title>
+  <!-- MDB icon -->
+  <!-- <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"> -->
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <!-- Google Fonts Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Material Design Bootstrap -->
+  <link rel="stylesheet" href="css/mdb.min.css">
+  <!-- Your custom styles (optional) -->
+  <link rel="stylesheet" href="css/servicestyle.css">
 </head>
 <body>
 
-
-
-      <!-- Start your project here-->
-  <section id="nav-1">
-    <!--Navbar -->
-    <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="home.html">
-          <div class="logo">
-            <img src="img/agri_logo1.png">
-          </div>
+  <!-- Start your project here-->  
+ <!--Navbar -->
+<nav class="mb-1 navbar navbar-expand-lg navbar-dark mdb-color ">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+    aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          <i class="fab fa-facebook-f"></i> Facebook
+          <span class="sr-only">(current)</span>
         </a>
-        <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-          <ul class="navbar-nav ml-auto nav-items flex-center">
-            <li class="nav-item">
-              <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">TEAM</p>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <i class="fab fa-instagram"></i> Instagram</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user"></i> Profile </a>
+        <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
+          <a class="dropdown-item" href="#">My account</a>
+          <a class="dropdown-item" href="#">Log out</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+<!--/.Navbar -->
+<div class="total">
+<!-- News jumbotron -->
+<div class="jumbotron text-center hoverable p-4">
+
+  <!-- Grid row -->
+  <div class="row">
+
+    
+
+    <!-- Grid column -->
+    <div class="col-md-7 text-md-left ml-3 mt-3">
+
+      <!-- Excerpt -->
+      <!-- <a href="#!" class="green-text">
+        <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
+      </a> -->
+
+      <h4 class="h4 mb-4 text-center">About Service</h4>
+
+      <p class="font-weight-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+       </p>
+      <!-- <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p> -->
+
+      <!-- <a class="btn btn-success">Read more</a> -->
+
+    </div>
+    <!-- Grid column -->
+    <!-- Grid column -->
+    <div class="col-md-4 offset-md-1 mx-3 my-3">
+
+      <!-- Featured image -->
+      <div class="view overlay">
+        <img src="https://mdbootstrap.com/img/Photos/Others/laptop-sm.jpg" class="img-fluid" alt="Sample image for first version of blog listing">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+</div>
+<!-- News jumbotron -->
+<!-- Card deck -->
+<div class="card-deck">
+
+  <!-- Card -->
+  <div class="card mb-4">
+
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/16.jpg"
+        alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+
+      <!--Title-->
+      <h4 class="card-title">Card title</h4>
+      <!--Text-->
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+      <button type="button" class="btn btn-light-blue btn-lg buttonprop">More</button>
+
+    </div>
+
+  </div>
+  <!-- Card -->
+
+  <!-- Card -->
+  <div class="card mb-4">
+
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/14.jpg"
+        alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+
+      <!--Title-->
+      <h4 class="card-title">Card title</h4>
+      <!--Text-->
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+      <button type="button" class="btn btn-light-blue btn-lg buttonprop">More</button>
+
+    </div>
+
+  </div>
+  <!-- Card -->
+
+  <!-- Card -->
+  <div class="card mb-4">
+
+    <!--Card image-->
+    <div class="view overlay">
+      <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/15.jpg"
+        alt="Card image cap">
+      <a href="#!">
+        <div class="mask rgba-white-slight"></div>
+      </a>
+    </div>
+
+    <!--Card content-->
+    <div class="card-body">
+
+      <!--Title-->
+      <h4 class="card-title">Card title</h4>
+      <!--Text-->
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+        content.</p>
+      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+      <button type="button" class="btn btn-light-blue btn-lg buttonprop">More</button>
+
+    </div>
+
+  </div>
+  <!-- Card -->
+
+</div>
+<!-- Card deck -->
+</div>
+&nbsp;
+&nbsp;
+&nbsp;
+<!-- Footer -->
+<footer class="page-footer font-small mdb-color pt-4">
+
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left">
+
+    <!-- Footer links -->
+    <div class="row text-center text-md-left mt-3 pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
+        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
+          consectetur
+          adipisicing elit.</p>
+      </div>
+      <!-- Grid column -->
+
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+        <p>
+          <a href="#!">MDBootstrap</a>
+        </p>
+        <p>
+          <a href="#!">MDWordPress</a>
+        </p>
+        <p>
+          <a href="#!">BrandFlow</a>
+        </p>
+        <p>
+          <a href="#!">Bootstrap Angular</a>
+        </p>
+      </div>
+      <!-- Grid column -->
+
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+        <p>
+          <a href="#!">Your Account</a>
+        </p>
+        <p>
+          <a href="#!">Become an Affiliate</a>
+        </p>
+        <p>
+          <a href="#!">Shipping Rates</a>
+        </p>
+        <p>
+          <a href="#!">Help</a>
+        </p>
+      </div>
+
+      <!-- Grid column -->
+      <hr class="w-100 clearfix d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+        <p>
+          <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+        <p>
+          <i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+        <p>
+          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+        <p>
+          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Footer links -->
+
+    <hr>
+
+    <!-- Grid row -->
+    <div class="row d-flex align-items-center">
+
+      <!-- Grid column -->
+      <div class="col-md-7 col-lg-8">
+
+        <!--Copyright-->
+        <p class="text-center text-md-left">© 2020 Copyright:
+          <a href="https://mdbootstrap.com/">
+            <strong> MDBootstrap.com</strong>
+          </a>
+        </p>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-5 col-lg-4 ml-lg-0">
+
+        <!-- Social buttons -->
+        <div class="text-center text-md-right">
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-facebook-f"></i>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">VISION</p>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-twitter"></i>
               </a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">PRODUCTS</p>
-              </a>
-              <div class="dropdown-menu no-gutters">
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
-              </div>
-            </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">DART</p>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-google-plus-g"></i>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">SERVICE</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">CONTACT</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">
-                <img src="img/cart5.png">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm rgba-white-slight mx-1">
+                <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
           </ul>
         </div>
+
       </div>
-    </nav>
-    <!--/.Navbar -->
-  </section>
-   <div class="container">
-           <h1 id="para1">SERVICES</h1>
-		<div class="row">
-     
-            <!-- Card -->
- <div class="col-sm-8 col-md-3 col-lg-3 card-ser">
-         <div class="card border-0" id="shadow" style="margin-left:100px;margin-right:-100px">
+      <!-- Grid column -->
 
-<!-- Card image -->
-         <a href="farmset.html">
-        <img class="card-img-top" src="img/farmsetting.jpg" style="height: 200px;"  alt="Card image cap"></a>
-<!-- Card content -->
-        <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title"><a>Farm set</a></h4>
-<!-- Text -->
-         <p class="card-text">Amount :$4500</p>
-	     </div>
-        </div>
-	 </div>
-	 
-             <!-- Card -->
-			
-    <div class="col-sm-8 col-md-3 col-lg-3">
-	    <div class="card border-0" id="shadow" style="margin-left:80px;margin-right:-80px">
-<!-- Card image -->
-         <a href="farmplan.html">
-         <img class="card-img-top" src="img/farmplan.jpg"  style="height: 200px;" alt="Card image cap"></a>
-<!-- Card content -->
-         <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title"><a>Farm plan</a></h4>
-<!-- Text -->
-         <p class="card-text">Amount :$4500</p>
-	    </div>
-		</div>
-	 </div>
-	
+    </div>
+    <!-- Grid row -->
 
-             <!-- Card -->
-	 <div class="col-sm-8 col-md-3 col-lg-3">		 
-         <div class="card border-0"  id="shadow" style="margin-left:60px;margin-right:-50px" >
-<!-- Card image -->
-         <a href="greenhut.html">
-         <img class="card-img-top" src="img/greenhut.jpg"  style="height: 200px;" alt="Card image cap"></a>
-<!-- Card content -->
-         <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title"><a>Greenhut</a></h4>
-<!-- Text -->
-          <p class="card-text">Amount :$4500</p>
-	     </div>
-         </div>
-	 </div>
-		     <!-- Card -->
-	 <div class="col-sm-8 col-md-3 col-lg-3">
-         <div class="card border-0" id="shadow" style="margin-left:30px;margin-right:-30px">
-<!-- Card image -->
-         <a href="farmplan.html">
-         <img class="card-img-top" src="img/farmplan.jpg" style="height: 200px;" alt="Card image cap"></a>
-<!-- Card content -->
-         <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title" id="ch"><a>Farm plan</a></h4>
-<!-- Text -->
-         <p class="card-text">Amount :$4500</p>
-	    </div>
-		</div>
-	</div>
-</div>   
+  </div>
+  <!-- Footer Links -->
 
+</footer>
+<!-- Footer -->
+  <!-- End your project here-->
 
+  <!-- jQuery -->
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <!-- Your custom scripts (optional) -->
+  <script type="text/javascript"></script>
 
-		 
-</div>
 </body>
-<!-- Development version -->
-<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
-
-<!-- Production version -->
-<script src="https://unpkg.com/@popperjs/core@2"></script>
-<!-- jQuery -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.js"></script>
-<script type="text/javascript" src="js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="js/mdb.min.js"></script>
-<!-- Your custom scripts (optional) -->
-<script type="text/javascript"></script>
-
 </html>
-
