--- a/home.html
+++ b/home.html
@@ -16,12 +16,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap-responsive.css">
-
-
-
 </head>
 
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" style="">
 
 
   <div class="jumbotron text-center">
