--- a/services.html
+++ b/services.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>AGRIVATOR</title>
+  <title>AGRIVATOR</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -9,35 +10,32 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="services.css">
   <link rel="stylesheet" href="css/product.css">
-<style>
-#aa
-{
-  text-align: center;
-  color:#78b122;
-}
- #para1{
-  text-align:center;
-  margin-bottom:5%;
-  color:green;
-  margin-top:8%;
- }
- 
-#shadow
-{
-   box-shadow: 5px 10px 9px #888888;
-   margin-left:10px;
-   } 
+  <style>
+    #aa {
+      text-align: center;
+      color: #ffffff;
+      background-color: #2f2e41;
+    }
 
+    #para1 {
+      text-align: center;
+      margin-bottom: 5%;
+      color: green;
+      margin-top: 7%;
+    }
 
- 
-
-</style>
+    #shadow {
+      box-shadow: 5px 10px 9px #888888;
+      margin-left: 10px;
+    }
+  </style>
 </head>
+
 <body>
 
 
 
-      <!-- Start your project here-->
+  <!-- Start your project here-->
   <section id="nav-1">
     <!--Navbar -->
     <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
@@ -64,24 +62,9 @@
                 <p class="m-1">VISION</p>
               </a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">PRODUCTS</p>
-              </a>
-              <div class="dropdown-menu no-gutters">
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                <a class="dropdown-item" href="product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
-              </div>
-            </li>
-            </li>
             <li class="nav-item">
-              <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">DART</p>
+              <a class="nav-link m-1" href="product.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">PRODUCTS</p>
               </a>
             </li>
             <li class="nav-item">
@@ -105,81 +88,78 @@
     </nav>
     <!--/.Navbar -->
   </section>
-   <div class="container">
-           <h1 id="para1">SERVICES</h1>
-		<div class="row">
-     
-            <!-- Card -->
- <div class="col-sm-8 col-md-3 col-lg-3 card-ser">
-         <div class="card border-0" id="shadow" style="margin-left:100px;margin-right:-100px">
+  <div class="container">
+    <h1 id="para1">SERVICES</h1>
+    <div class="row mx-auto">
 
-<!-- Card image -->
-         <a href="farmset.html">
-        <img class="card-img-top" src="img/farmsetting.jpg" style="height: 200px;"  alt="Card image cap"></a>
-<!-- Card content -->
-        <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title"><a>Farm set</a></h4>
-<!-- Text -->
-         <p class="card-text">Amount :$4500</p>
-	     </div>
+      <!-- Card -->
+      <div class="col-sm-8 col-md-4 col-lg-4 card-ser mx-auto">
+        <div class="card border-0">
+
+          <!-- Card image -->
+          <a href="farmset.html">
+            <img class="card-img-top" src="img/farmsetting.jpg" style="height: 200px;" alt="Card image cap"></a>
+          <!-- Card content -->
+          <div class="card-body" id="aa">
+            <!-- Title -->
+            <h4 class="card-title"><a>Farm set</a></h4>
+            <!-- Text -->
+            <p class="card-text">Amount :$4500</p>
+          </div>
         </div>
-	 </div>
-	 
-             <!-- Card -->
-			
-    <div class="col-sm-8 col-md-3 col-lg-3">
-	    <div class="card border-0" id="shadow" style="margin-left:80px;margin-right:-80px">
-<!-- Card image -->
-         <a href="farmplan.html">
-         <img class="card-img-top" src="img/farmplan.jpg"  style="height: 200px;" alt="Card image cap"></a>
-<!-- Card content -->
-         <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title"><a>Farm plan</a></h4>
-<!-- Text -->
-         <p class="card-text">Amount :$4500</p>
-	    </div>
-		</div>
-	 </div>
-	
+      </div>
 
-             <!-- Card -->
-	 <div class="col-sm-8 col-md-3 col-lg-3">		 
-         <div class="card border-0"  id="shadow" style="margin-left:60px;margin-right:-50px" >
-<!-- Card image -->
-         <a href="greenhut.html">
-         <img class="card-img-top" src="img/greenhut.jpg"  style="height: 200px;" alt="Card image cap"></a>
-<!-- Card content -->
-         <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title"><a>Greenhut</a></h4>
-<!-- Text -->
-          <p class="card-text">Amount :$4500</p>
-	     </div>
-         </div>
-	 </div>
-		     <!-- Card -->
-	 <div class="col-sm-8 col-md-3 col-lg-3">
-         <div class="card border-0" id="shadow" style="margin-left:30px;margin-right:-30px">
-<!-- Card image -->
-         <a href="farmplan.html">
-         <img class="card-img-top" src="img/farmplan.jpg" style="height: 200px;" alt="Card image cap"></a>
-<!-- Card content -->
-         <div class="card-body" id="aa">
-<!-- Title -->
-         <h4 class="card-title" id="ch"><a>Farm plan</a></h4>
-<!-- Text -->
-         <p class="card-text">Amount :$4500</p>
-	    </div>
-		</div>
-	</div>
-</div>   
+      <!-- Card -->
+
+      <div class="col-sm-8 col-md-4 col-lg-4 mx-auto">
+        <div class="card border-0">
+          <!-- Card image -->
+          <a href="farmplan.html">
+            <img class="card-img-top" src="img/farmplan.jpg" style="height: 200px;" alt="Card image cap"></a>
+          <!-- Card content -->
+          <div class="card-body" id="aa">
+            <!-- Title -->
+            <h4 class="card-title"><a>Farm plan</a></h4>
+            <!-- Text -->
+            <p class="card-text">Amount :$4500</p>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Card -->
+      <div class="col-sm-8 col-md-4 col-lg-4 mx-auto">
+        <div class="card border-0">
+          <!-- Card image -->
+          <a href="greenhut.html">
+            <img class="card-img-top" src="img/greenhut.jpg" style="height: 200px;" alt="Card image cap"></a>
+          <!-- Card content -->
+          <div class="card-body" id="aa">
+            <!-- Title -->
+            <h4 class="card-title"><a>Greenhut</a></h4>
+            <!-- Text -->
+            <p class="card-text">Amount :$4500</p>
+          </div>
+        </div>
+      </div>
+      <!-- Card -->
+      <!-- <div class="col-sm-8 col-md-3 col-lg-3 mx-auto">
+        <div class="card border-0">
+          <a href="farmplan.html">
+            <img class="card-img-top" src="img/farmplan.jpg" style="height: 200px;" alt="Card image cap"></a>
+          
+          <div class="card-body" id="aa">
+            <h4 class="card-title" id="ch"><a>Farm plan</a></h4>
+            <p class="card-text">Amount :$4500</p>
+          </div>
+        </div>
+      </div> -->
+    </div>
 
 
 
-		 
-</div>
+
+  </div>
 </body>
 <!-- Development version -->
 <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
@@ -199,4 +179,3 @@
 <script type="text/javascript"></script>
 
 </html>
-
